--- a/cc-server/pom.xml
+++ b/cc-server/pom.xml
@@ -25,7 +25,7 @@
     </build>
 
     <properties>
-        <spring.version>4.1.0.RC2</spring.version>
+        <spring.version>4.3.2.RELEASE</spring.version>
         <servlet.version>2.5</servlet.version>
 
         <commons-lang.version>2.6</commons-lang.version>
