--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>cc-server</module>
         <module>cc-client</module>
+        <module>cc-common</module>
     </modules>
 
     <properties>
@@ -43,6 +44,12 @@
     </profiles>
 
     <dependencies>
+        <dependency>
+            <groupId>com.liushijie</groupId>
+            <artifactId>cc-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
