--- a/cc-client/pom.xml
+++ b/cc-client/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cc-client</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <build>
         <plugins>
@@ -24,6 +25,11 @@
         </plugins>
     </build>
     <dependencies>
+        <dependency>
+            <groupId>com.liushijie</groupId>
+            <artifactId>cc-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
