--- a/cc-common/pom.xml
+++ b/cc-common/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cc-common</artifactId>
-
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
 </project>
