--- a/cc-server/pom.xml
+++ b/cc-server/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cc-server</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <build>
         <plugins>
@@ -37,6 +38,17 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.liushijie</groupId>
+            <artifactId>cc-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.1.0</version>
+        </dependency>
         <!-- spring -->
         <dependency>
             <groupId>org.springframework</groupId>
