--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,10 @@
         <netty_version>4.0.24.Final</netty_version>
         <slf4j.version>1.7.5</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
+        <maven-compiler-plugin.version>2.1</maven-compiler-plugin.version>
+        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
         <encoding>UTF-8</encoding>
 
-        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
-        <controller.access.token>65ec9832286b6c6436aad2ac49cbbaf7</controller.access.token>
     </properties>
 
     <profiles>
@@ -44,11 +44,6 @@
     </profiles>
 
     <dependencies>
-        <dependency>
-            <groupId>com.liushijie</groupId>
-            <artifactId>cc-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
 
         <dependency>
             <groupId>io.netty</groupId>
@@ -71,6 +66,13 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>${maven-compiler-plugin.version}</version>
+            <type>maven-plugin</type>
         </dependency>
     </dependencies>
 
