--- a/cc-server/pom.xml
+++ b/cc-server/pom.xml
@@ -29,19 +29,45 @@
         <spring.version>4.3.2.RELEASE</spring.version>
         <servlet.version>2.5</servlet.version>
 
+        <druid.version>1.0.19</druid.version>
+
         <commons-lang.version>2.6</commons-lang.version>
         <commons-collections.version>3.2.1</commons-collections.version>
         <commons-io.version>2.4</commons-io.version>
         <commons-compress.version>1.8.1</commons-compress.version>
-
+        <org.testng.version>6.10</org.testng.version>
         <guava.version>17.0</guava.version>
     </properties>
 
     <dependencies>
         <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.liushijie</groupId>
             <artifactId>cc-common</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <!--数据库连接池 begin-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${druid.version}</version>
+        </dependency>
+        <!--数据库连接池 end -->
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.27</version>
         </dependency>
 
         <dependency>
@@ -148,6 +174,13 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${org.testng.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
