客户端代码部分提交

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>cc-server</module>
         <module>cc-client</module>
         <module>cc-common</module>
+        <module>demo</module>
     </modules>
 
     <properties>
